Ein leeres Demo-Projekt
- Gradle 6.3
- JDK 14 mit --enable-preview
- JUnit 5
- AssertJ