@@ -10,7 +10,21 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.assertj:assertj-core:3.16.1"
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+    testImplementation "org.assertj:assertj-core:3.16.1"
 
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+test {
+    jvmArgs(['--enable-preview'])
 }
